changes to index.html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,8 +13,8 @@
      </div>
      <nav class="about">
         <!-- <a href="">Home</a> -->
-        <a href="">About  Us</a>
-        <a href="">Products</a>
+        <a href="/pages//about.html">About  Us</a>
+        <a href="/pages//Product.html">Products</a>
         <!-- <a href="" id="appointment">Book Appointment</a> -->
      </nav>
    </div>
