--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      </div>
      <nav class="about">
         <!-- <a href="">Home</a> -->
-        <a href="/pages//about.html">About  Us</a>
-        <a href="/pages//Product.html">Products</a>
+        <a href="/pages/about.html">About  Us</a>
+        <a href="/pages/Product.html">Products</a>
         <!-- <a href="" id="appointment">Book Appointment</a> -->
      </nav>
    </div>
