--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
     <header class="first">
         <div class="head">
             <div class="image">
-                <img src="Assest/img/logo2.jpg" alt="">
+                <img src="/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
