adjustment of codes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      </div>
      <nav class="about">
         <!-- <a href="">Home</a> -->
-        <a href="/pages/about.html">About  Us</a>
-        <a href="/pages/Product.html">Products</a>
+        <a href="./pages/about.html">About  Us</a>
+        <a href="./pages/Product.html">Products</a>
         <!-- <a href="" id="appointment">Book Appointment</a> -->
      </nav>
    </div>
@@ -29,7 +29,7 @@
         </div>
      </div>
      <div class="second-launch">
-        <img src="images/gfgfgfhhjhjbh-removebg-preview (1).png" alt="">
+        <img src="./images/gfgfgfhhjhjbh-removebg-preview (1).png" alt="">
      </div>
    </section>
 </body>
