--- a/pages/Product.html
+++ b/pages/Product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/my_hairlify/css/product.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/images/logo2.jpg" alt="">
+                <img src="/my_hairlify/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -78,7 +78,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b7.jpeg" alt="">
+                    <img src="/my_hairlify/images/b7.jpeg" alt="">
                 </div>
                 <h4>
                     180% Density Short Bob Jerry Curly  Lace  <br> Human Hair 
@@ -92,7 +92,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/c2.jpg" alt="">
+                    <img src="/my_hairlify/images/c2.jpg" alt="">
                 </div>
                 <h4>13x4 Body Wave Lace Front Wigs Human <br> Hair Glueless Wigs
                     Human Hair <br> Pre Plucked With Baby Hair.</h4>
@@ -104,7 +104,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b8.jpeg" alt="">
+                    <img src="/my_hairlify/images/b8.jpeg" alt="">
                 </div>
                 <h4>
                     Afro Kiinky Curly Short Bob <br> Wig Human Hair Lace 
@@ -118,7 +118,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b9.jpeg" alt="">
+                    <img src="/my_hairlify/images/b9.jpeg" alt="">
                 </div>
                 <h4>
                     Daily Silver Gray Gradient Long Hair <br>
@@ -132,7 +132,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b10.jpeg" alt="">
+                    <img src="/my_hairlify/images/b10.jpeg" alt="">
                 </div>
                 <h4>
                     Natural Black Straight 13x4 Brazilian Hair <br> 4x4 
@@ -148,7 +148,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b11.jpeg" alt="">
+                    <img src="/my_hairlify/images/b11.jpeg" alt="">
                 </div>
                 <h4>
                     30 Inch Lace Front Wig 13x4 Lace Frontal <br>
@@ -162,7 +162,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b3.jpeg" alt="">
+                    <img src="/my_hairlify/images/b3.jpeg" alt="">
                 </div>
                 <h4>
                     Highlight Wig 100% Human Hair <br> 13x4 40 <br>
@@ -176,7 +176,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/d3.jpg" alt="">
+                    <img src="/my_hairlify/images/d3.jpg" alt="">
                 </div>
                 <h4>
                     250% Density13x4 Orange Ginger Body <br> Wave Lace 
@@ -191,7 +191,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b12.jpeg" alt="">
+                    <img src="/my_hairlify/images/b12.jpeg" alt="">
                 </div>
                 <h4>
                     Human Hair Blend HD Lace Front Wig <br>
@@ -205,7 +205,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/b13.jpeg" alt="">
+                    <img src="/my_hairlify/images/b13.jpeg" alt="">
                 </div>
                 <h4>Lace Front Wigs Human Hair Blend Loose <br> Curly 
                     18 Extra Wide 5 Inch Part <br> Pre Plucked Hair.</h4>
@@ -230,7 +230,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b14.jpeg" alt="">
+                    <img src="/my_hairlify/images/b14.jpeg" alt="">
                 </div>
                 <h4>
                     Bob Wig Human Hair 13x5x1 Glueless <br> Lace Front Wigs Human Hair <br>Pre Plucked.
@@ -243,7 +243,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/a2.jpg" alt="">
+                    <img src="/my_hairlify/images/a2.jpg" alt="">
                 </div>
                 <h4>
                     Straight Human Hair Wigs With Bangs Natural <br>
@@ -257,7 +257,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/d2.jpg" alt="">
+                    <img src="/my_hairlify/images/d2.jpg" alt="">
                 </div>
                 <h4>
                     250% Density13x4 Orange Ginger Body Wave Lace <br>Front Wigs 
@@ -271,7 +271,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/a9.jpg" alt="">
+                    <img src="/my_hairlify/images/a9.jpg" alt="">
                 </div>
                 <h4>
                     210% Density Vietname Double Drawn Human <br> Hair 
@@ -287,7 +287,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b15.jpeg" alt="">
+                    <img src="/my_hairlify/images/b15.jpeg" alt="">
                 </div>
                 <h4>
                     Yaki Straight 360 Lace Wig Raw Indian <br> Hair Transparent 
@@ -301,7 +301,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b6.jpeg" alt="">
+                    <img src="/my_hairlify/images/b6.jpeg" alt="">
                 </div>
                 <h4>
                     13x6 Lace Front Wigs Straight Virgin <br> Human Hair 
@@ -315,7 +315,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b16.jpeg" alt="">
+                    <img src="/my_hairlify/images/b16.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear <br>
@@ -329,7 +329,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b17.jpeg" alt="">
+                    <img src="/my_hairlify/images/b17.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Lace Front Wigs Human Hair<br> Pre 
@@ -349,7 +349,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/images/logo2.jpg" alt="">
+                   <img src="/my_hairlify/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
