--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/my_hairlify/css/about.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
     <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/images/logo2.jpg" alt="">
+                <img src="/my_hairlify/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -50,7 +50,7 @@
    <!-- body -->
     <section class="contact">
         <div class="img">
-            <img src="/images/about.jpg" alt="">
+            <img src="/my_hairlify/images/about.jpg" alt="">
             <div>
                 <a href="">About Us</a>
             </div>
@@ -102,7 +102,7 @@
             <div class="second-container">
                 <div class="client-1">
                     <div class="image">
-                        <img src="/images/client 2b.jpg" id="img"  alt="">
+                        <img src="/my_hairlify/images/client 2b.jpg" id="img"  alt="">
                     </div>
                     <div class="brand">
                         <h5>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="client-1">
                     <div class="image">
-                        <img src="/images/client 1a.jpg" alt="">
+                        <img src="/my_hairlify/images/client 1a.jpg" alt="">
                     </div>
                     <div class="brand">
                         <h5>
@@ -151,7 +151,7 @@
             <div class="second-container" id="rescue">
                 <div class="client-1">
                     <div class="image">
-                        <img src="/images/client3a.jpg" alt="">
+                        <img src="/my_hairlify/images/client3a.jpg" alt="">
                     </div>
                     <div class="brand">
                         <h5>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="client-1">
                     <div class="image">
-                        <img src="/images/client 3b.jpg" alt="">
+                        <img src="/my_hairlify/images/client 3b.jpg" alt="">
                     </div>
                     <div class="brand">
                         <h5>
@@ -204,7 +204,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/images/logo2.jpg" alt="">
+                   <img src="/my_hairlify/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
