--- a/pages/bronze.html
+++ b/pages/bronze.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/plantinum.css">
+    <link rel="stylesheet" href="/my_hairlify/css/plantinum.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/images/logo2.jpg" alt="">
+                <img src="/my_hairlify/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -77,7 +77,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h10.jpeg" alt="">
+                    <img src="/my_hairlify/images/h10.jpeg" alt="">
                 </div>
                 <h4>
                     Sensational Braids X-Pression 3x Pre-Stretched <br>
@@ -92,7 +92,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h11.jpeg" alt="">
+                    <img src="/my_hairlify/images/h11.jpeg" alt="">
                 </div>
                 <h4>
                     100% Kanekalon-Fiber Lush Wow <br>
@@ -106,7 +106,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h12.jpeg" alt="">
+                    <img src="/my_hairlify/images/h12.jpeg" alt="">
                 </div>
                 <h4>
                     Darling Flex Rod Curls Crochet Hair Extensions <br>
@@ -121,7 +121,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h13.jpeg" alt="">
+                    <img src="/my_hairlify/images/h13.jpeg" alt="">
                 </div>
                 <h4>
                     100% Kanekalon-Fiber Darling <br>
@@ -136,7 +136,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h14.jpeg" alt="">
+                    <img src="/my_hairlify/images/h14.jpeg" alt="">
                 </div>
                 <h4>
                     Lush Sasha Locs Hair Extension Crochet Braids <br> 1Pack 
@@ -150,7 +150,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h15.jpeg" alt="">
+                    <img src="/my_hairlify/images/h15.jpeg" alt="">
                 </div>
                 <h4>
                     Spring Twist Hair Marley Twist Braiding Hair <br> 20Inch 
@@ -165,7 +165,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h16.jpeg" alt="">
+                    <img src="/my_hairlify/images/h16.jpeg" alt="">
                 </div>
                 <h4>
                     Outre DIY 2X Packs Pre-Stretched Braid <br>
@@ -180,7 +180,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h17.jpeg" alt="">
+                    <img src="/my_hairlify/images/h17.jpeg" alt="">
                 </div>
                 <h4>
                     GoGo Curl Crochet Hair Ginger Curly Crochet <br> Hair
@@ -195,7 +195,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h18.jpeg" alt="">
+                    <img src="/my_hairlify/images/h18.jpeg" alt="">
                 </div>
                 <h4>
                     Afro Kinky Marley Braiding Twist Crochet <br>
@@ -212,7 +212,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h10b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h10b.jpeg" alt="">
                 </div>
                 <h4>
                     (4Packs) Darling Pre-Stretched <br>
@@ -227,7 +227,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h11b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h11b.jpeg" alt="">
                 </div>
                 <h4>
                     Bohemian Locs Crochet Hair, Faux Loc Crochet <br>
@@ -241,7 +241,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h12b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h12b.jpeg" alt="">
                 </div>
                 <h4>
                     22 Inch Spiral Curly Pony Hair <br>
@@ -257,7 +257,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h13b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h13b.jpeg" alt="">
                 </div>
                 <h4>
                     Bomb Twist Crochet Hair 14Inch 6Packs <br>
@@ -271,7 +271,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h14b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h14b.jpeg" alt="">
                 </div>
                 <h4>100% Kanekalon-Fiber <br>
                     X-Pression Hair Braids Extensions.
@@ -284,7 +284,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h15b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h15b.jpeg" alt="">
                 </div>
                 <h4>
                     Synthetic French Curly Hair <br>
@@ -298,7 +298,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h16b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h16b.jpeg" alt="">
                 </div>
                 <h4>
                     13x4 HD Lace Frontal Closure Pre Plucked With <br>
@@ -313,7 +313,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h17b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h17b.jpeg" alt="">
                 </div>
                 <h4>
                     Ponytail Braid Loop French Curly Hair Woven <br>
@@ -328,7 +328,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/images/h18b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h18b.jpeg" alt="">
                 </div>
                 <h4>
                     Goddess Box Braids Crochet Hair With Curl <br>
@@ -356,7 +356,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b11.jpeg" alt="">
+                    <img src="/my_hairlify/images/b11.jpeg" alt="">
                 </div>
                 <h4>
                     30 Inch Lace Front Wig 13x4 Lace Frontal Wigs <br> pre
@@ -370,7 +370,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b30.jpeg" alt="">
+                    <img src="/my_hairlify/images/b30.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear And Go Wig <br>
@@ -385,7 +385,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images//h19.jpeg" alt="">
+                    <img src="/my_hairlify/images//h19.jpeg" alt="">
                 </div>
                 <h4>
                     Pre-Stretched Braiding Hair Extensions <br>
@@ -402,7 +402,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/h19b.jpeg" alt="">
+                    <img src="/my_hairlify/images/h19b.jpeg" alt="">
                 </div>
                 <h4>
                     Short Straight Bob Wig With Bangs Brazilian <br> Human Hair Wig Remy 
@@ -416,7 +416,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/b9.jpeg" alt="">
+                    <img src="/my_hairlify/images/b9.jpeg" alt="">
                 </div>
                 <h4>
                     Daily Silver Gray Gradient Long Hair <br>
@@ -431,7 +431,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/images/h20.jpeg" alt="">
+                    <img src="/my_hairlify/images/h20.jpeg" alt="">
                 </div>
                 <h4>
                     Long Bob Passion Twist Crochet Hair <br>
@@ -452,7 +452,7 @@
             <div class="help">
                <div class="order">
                    <div class="order-1">
-                       <img src="/images/logo2.jpg" alt="">
+                       <img src="/my_hairlify/images/logo2.jpg" alt="">
                        <div class="order-2">
                            <h3>
                                MyHairlify
