--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/my_hairlify/css/contact.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
     <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/images/logo2.jpg" alt="">
+                <img src="/my_hairlify/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -51,7 +51,7 @@
     <!-- contact -->
     <section class="contact">
         <div class="img">
-            <img src="/images/contact.jpg" alt="">
+            <img src="/my_hairlify/images/contact.jpg" alt="">
             <div>
                 <a href="">Contact Us</a>
             </div>
@@ -112,7 +112,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/images/logo2.jpg" alt="">
+                   <img src="/my_hairlify/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
