--- a/pages/forgotpassword.html
+++ b/pages/forgotpassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <link rel="stylesheet" href="/css/forgot.css">
+    <link rel="stylesheet" href="/my_hairlify/css/forgot.css">
     <title>Forgot password</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <button>Submit</button>
         </div>
         <div class="second">
-            <img src="/images/lock2.png" alt="">
+            <img src="/my_hairlify/images/lock2.png" alt="">
         </div>
     </section>
 </body>
