--- a/pages/reset.html
+++ b/pages/reset.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/my_hairlify/css/reset.css">
     <title>Reset Password</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             <button>Password Updated</button>
         </div>
         <div class="second">
-            <img src="/images/lock3.png" alt="">
+            <img src="/my_hairlify/images/lock3.png" alt="">
         </div>
     </section>
 </body>
