--- a/pages/signin.html
+++ b/pages/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/signin.css">
+    <link rel="stylesheet" href="/my_hairlify/css/signin.css">
     <script
     src="https://kit.fontawesome.com/3bf6e17bc2.js"
     crossorigin="anonymous"></script>
@@ -49,7 +49,7 @@
 
         <!-- second -->
         <div class="second">
-          <img src="/images/lock1.png" alt="">
+          <img src="/my_hairlify/images/lock1.png" alt="">
         </div>
     </section>
 </body>
